Resolve(core): 얼럿이 모달 위에 뜨도록 z-index 수정

--- a/src/style-core/scss/config/_layer.scss
+++ b/src/style-core/scss/config/_layer.scss
@@ -35,6 +35,8 @@ $layer-shadows: (base: none,
 
 $z-indexes: (
   tooltip: 9000,
+  alert: 8500,
+  alert-overlay: 8400,
   dropdown: 8100,
   modal: 8000,
   overlay: 7000,
